--- a/1albert.html
+++ b/1albert.html
@@ -98,46 +98,46 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/1albert-pictures/326880037.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/1albert-pictures/326880037.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/1albert-pictures/316081521.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/1albert-pictures/316081521.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/1albert-pictures/326880095.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/1albert-pictures/326880095.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/1albert-pictures/326880027.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/1albert-pictures/326880027.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/1albert-pictures/326880022.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/1albert-pictures/326880022.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/1albert-pictures/326880010.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/1albert-pictures/326880010.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/1albert-pictures/317837347.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/1albert-pictures/317837347.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/1albert-pictures/317837338.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/1albert-pictures/317837338.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/1albert-pictures/317837331.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/1albert-pictures/317837331.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/1albert-pictures/316081508.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/1albert-pictures/316081508.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/1albert-pictures/316081506.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/1albert-pictures/316081506.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/1albert-pictures/316081504.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/1albert-pictures/316081504.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/1albert-pictures/316081459.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/1albert-pictures/316081459.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/1albert-pictures/326880001.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/1albert-pictures/326880001.jpeg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
