--- a/cityclub.html
+++ b/cityclub.html
@@ -98,46 +98,46 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="cityClubMainImg" src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/cityclub-pictures/263292109.jpeg" class="d-block w-100" alt="...">
+            <img class="cityClubMainImg" src="Hotels & Aparthotels/cityclub-pictures/263292109.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/cityclub-pictures/270938803.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/cityclub-pictures/270938803.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/cityclub-pictures/270938801.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/cityclub-pictures/270938801.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/cityclub-pictures/270938797.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/cityclub-pictures/270938797.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/cityclub-pictures/269320935.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/cityclub-pictures/269320935.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/cityclub-pictures/269320927.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/cityclub-pictures/269320927.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/cityclub-pictures/269320917.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/cityclub-pictures/269320917.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/cityclub-pictures/269276758.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/cityclub-pictures/269276758.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/cityclub-pictures/267272151.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/cityclub-pictures/267272151.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/cityclub-pictures/263292149.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/cityclub-pictures/263292149.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/cityclub-pictures/250658373.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/cityclub-pictures/250658373.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/cityclub-pictures/250658369.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/cityclub-pictures/250658369.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/cityclub-pictures/250658347.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/cityclub-pictures/250658347.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/cityclub-pictures/250658341.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/cityclub-pictures/250658341.jpeg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
