--- a/fourseasons.html
+++ b/fourseasons.html
@@ -96,40 +96,40 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/fourseasons-pictures/280191088.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/fourseasons-pictures/280191088.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/fourseasons-pictures/303693328.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/fourseasons-pictures/303693328.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/fourseasons-pictures/303693295.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/fourseasons-pictures/303693295.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/fourseasons-pictures/291262627.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/fourseasons-pictures/291262627.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/fourseasons-pictures/291262619.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/fourseasons-pictures/291262619.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/fourseasons-pictures/280191147.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/fourseasons-pictures/280191147.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/fourseasons-pictures/280191093.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/fourseasons-pictures/280191093.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/fourseasons-pictures/262496528.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/fourseasons-pictures/262496528.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/fourseasons-pictures/262496518.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/fourseasons-pictures/262496518.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/fourseasons-pictures/262496512.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/fourseasons-pictures/262496512.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/fourseasons-pictures/262496507.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/fourseasons-pictures/262496507.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/fourseasons-pictures/262496477.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/fourseasons-pictures/262496477.jpeg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
