--- a/thesquare.html
+++ b/thesquare.html
@@ -97,43 +97,43 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/square-pictures/266818557.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/square-pictures/266818557.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/square-pictures/288469180.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/square-pictures/288469180.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/square-pictures/288469178.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/square-pictures/288469178.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/square-pictures/288469174.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/square-pictures/288469174.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/square-pictures/288469169.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/square-pictures/288469169.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/square-pictures/280091461.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/square-pictures/280091461.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/square-pictures/266818559.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/square-pictures/266818559.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/square-pictures/266818554.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/square-pictures/266818554.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/square-pictures/266818550.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/square-pictures/266818550.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/square-pictures/266818548.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/square-pictures/266818548.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/square-pictures/266818543.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/square-pictures/266818543.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/square-pictures/266818539.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/square-pictures/266818539.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/square-pictures/266818515.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/square-pictures/266818515.jpeg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
