--- a/wex1apartments.html
+++ b/wex1apartments.html
@@ -98,46 +98,46 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/Wex1pictures/197036564.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/Wex1pictures/197036564.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/Wex1pictures/275676230.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/Wex1pictures/275676230.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/Wex1pictures/275676233.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/Wex1pictures/275676233.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/Wex1pictures/271574470.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/Wex1pictures/271574470.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/Wex1pictures/271574466.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/Wex1pictures/271574466.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/Wex1pictures/271574464.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/Wex1pictures/271574464.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/Wex1pictures/267385928.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/Wex1pictures/267385928.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/Wex1pictures/232533158.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/Wex1pictures/232533158.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/Wex1pictures/232533148.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/Wex1pictures/232533148.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/Wex1pictures/232533142.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/Wex1pictures/232533142.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/Wex1pictures/232533138.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/Wex1pictures/232533138.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/Wex1pictures/271574475.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/Wex1pictures/271574475.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/Wex1pictures/196387696.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/Wex1pictures/196387696.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/Wex1pictures/188498942.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/Wex1pictures/188498942.jpeg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
