--- a/wish.html
+++ b/wish.html
@@ -98,46 +98,46 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/wish-pictures/369833916.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/wish-pictures/369833916.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/wish-pictures/356765615.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/wish-pictures/356765615.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/wish-pictures/321265392.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/wish-pictures/321265392.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/wish-pictures/321265402.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/wish-pictures/321265402.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/wish-pictures/295755308.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/wish-pictures/295755308.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/wish-pictures/295755320.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/wish-pictures/295755320.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/wish-pictures/295755299.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/wish-pictures/295755299.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/wish-pictures/295755286.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/wish-pictures/295755286.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/wish-pictures/295755124.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/wish-pictures/295755124.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/wish-pictures/294098772.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/wish-pictures/294098772.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/wish-pictures/294097697.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/wish-pictures/294097697.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/wish-pictures/294097409.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/wish-pictures/294097409.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/wish-pictures/294096076.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/wish-pictures/294096076.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/wish-pictures/292103379.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/wish-pictures/292103379.jpeg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
