--- a/york.html
+++ b/york.html
@@ -96,40 +96,40 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/york-pictures/324733406.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/york-pictures/324733406.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/york-pictures/324733418.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/york-pictures/324733418.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/york-pictures/324733046.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/york-pictures/324733046.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/york-pictures/324733027.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/york-pictures/324733027.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/york-pictures/324733014.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/york-pictures/324733014.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/york-pictures/324733012.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/york-pictures/324733012.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/york-pictures/324732909.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/york-pictures/324732909.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/york-pictures/324732902.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/york-pictures/324732902.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/york-pictures/324732897.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/york-pictures/324732897.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/york-pictures/324732892.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/york-pictures/324732892.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/york-pictures/324732889.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/york-pictures/324732889.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/Users/user/Documents/Web Development/Daily-UI-03/Hotels & Aparthotels/york-pictures/324732886.jpeg" class="d-block w-100" alt="...">
+            <img src="Hotels & Aparthotels/york-pictures/324732886.jpeg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
