--- a/manageplace-agree.html
+++ b/manageplace-agree.html
@@ -86,7 +86,7 @@
           </div>
         </div>
         <div class="col-lg-9">
-          <iframe class="pdfViewer" src="docs/Happy Home Management Agreement">
+          <iframe class="pdfViewer" src="docs/Happy Home Management Agreement.pdf">
           </iframe>
         </div>
 
